--- a/lefloch_sabr_fdm.bib
+++ b/lefloch_sabr_fdm.bib
@@ -1,3 +1,30 @@
+@article{pooley2003convergence,
+  title={{Convergence remedies for non-smooth payoffs in option pricing}},
+  author={Pooley, D.M. and Vetzal, K.R. and Forsyth, P.A.},
+  journal={Journal of Computational Finance},
+  volume={6},
+  number={4},
+  pages={25--40},
+  year={2003},
+  publisher={RISK PUBLICATIONS}
+}
+
+@book{tavella-pricing,
+  title={{Pricing financial instruments: The finite difference method}},
+  author={Tavella, D. and Randall, C.},
+  year={2000},
+  PUBLISHER={Wiley}
+}
+
+@article{breeden1978prices,
+  title={Prices of state-contingent claims implicit in option prices},
+  author={Breeden, Douglas T and Litzenberger, Robert H},
+  journal={Journal of business},
+  pages={621--651},
+  year={1978},
+  publisher={JSTOR}
+}
+
 @misc{andersen2010interest,
   title={Interest Rate Modeling, Volume I: Foundations and Vanilla Models},
   author={Andersen, Leif BG and Piterbarg, Vladimir V},
@@ -95,11 +122,19 @@
 }
 
 
-@article{floc2013tr,
+@article{lefloch2013tr,
   title={{TR-BDF2} for Stable American Option Pricing},
   author={{Le Floc'h}, Fabien},
   journal={Journal of Computational Finance (to appear)},
   year={2013}
+}
+@article{lefloch2013exacttr,
+ title={Exact Forward and Put-Call Parity with TR-BDF2},
+  author={{Le Floc'h}, Fabien},
+  journal={SSRN eLibrary},
+  location={http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2362969},
+  year={2013},
+  publisher={SSRN}
 }
 
 @article{dharmaraja2009optimal,
